/*
* Copyright (c) 2025 Rahul Anishetty
*
* This program is dual-licensed under either AGPL-3.0 or a commercial license.
* For commercial licensing options, please contact the author.
* For AGPL-3.0 licensing details, see the LICENSE file in the repository root.
*/
plugins {
	// Apply the java Plugin to add support for Java.
	id 'java'
	id 'java-test-fixtures'
}

repositories {
	// Use Maven Central for resolving dependencies.
	mavenCentral()
}

dependencies {
	constraints {
		// Define dependency versions as constraints
		// ex: implementation 'org.apache.commons:commons-text:1.12.0'
	}

	// Use JUnit Jupiter for testing.
	testImplementation 'org.junit.jupiter:junit-jupiter:5.11.1'
	testFixturesImplementation 'org.junit.jupiter:junit-jupiter:5.11.1'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.compilerArgs += [
		'-parameters',
		'--enable-preview'
	]
}

tasks.named('test') {
	// Use JUnit Platform for unit tests.
	useJUnitPlatform()
	testLogging {
		events 'passed', 'skipped', 'failed'
	}
	jvmArgs += [
		// Enable preview features
		'--enable-preview',
		// Set file encoding to UTF-8
		'-Dfile.encoding=UTF-8',
		// Set timezone to UTC
		'-Duser.timezone=UTC',
		// Virtual thread pinning
		'-Djdk.tracePinnedThreads=full'
	]
}
